--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
+    "gsap": "^3.12.5",
+    "next": "14.2.8",
+    "next-themes": "^0.3.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
+    "recharts": "^2.12.7",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "postcss": "^8",
