--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.12.5",
     "next": "14.2.8",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
